tests/baselines/reference/jsFileCompilationErrorOnDeclarationsWithJsFileReferenceWithOut.errors.txt
tests/cases/compiler/b.ts(1,1): error TS8018: .js file cannot be referenced in .ts file when emitting declarations.


==== tests/cases/compiler/a.ts (0 errors) ====
    class c {
    }
    
==== tests/cases/compiler/b.ts (1 errors) ====
    /// <reference path="c.js"/>
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8018: .js file cannot be referenced in .ts file when emitting declarations.
    // error on above reference when emitting declarations
    function foo() {
    }
    
==== tests/cases/compiler/c.js (0 errors) ====
    function bar() {
    }